[gd_scene load_steps=5 format=3 uid="uid://b48ry0wxgcf6j"]

[ext_resource type="Script" path="res://Scripts/Spring_Character/spring_script.gd" id="1_vo6qc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r75c0"]
albedo_color = Color(1, 0.352941, 0.588235, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_7uywl"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yp33q"]

[node name="Spring" type="CharacterBody3D"]
script = ExtResource("1_vo6qc")

[node name="SpringMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_r75c0")
mesh = SubResource("CylinderMesh_7uywl")

[node name="SpringCol" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_yp33q")

[node name="SpringCameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)

[node name="SpringArm" type="SpringArm3D" parent="SpringCameraPivot"]
unique_name_in_owner = true
spring_length = 9.0

[node name="SpringCamera" type="Camera3D" parent="SpringCameraPivot/SpringArm"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9)
